--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,11 @@ require:
   - standard
   - rubocop-rake
   - rubocop-rspec
+  - rubocop-performance
+
+inherit_mode:
+  merge:
+    - Exclude
 
 inherit_gem:
   standard: config/base.yml
